php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #25583 Incorrect handling of absolute path without drive.
Submitted: 2003-09-18 04:05 UTC Modified: 2003-09-19 21:38 UTC
From: d dot stogov at turck dot spb dot eu Assigned: iliaa (profile)
Status: Closed Package: Directory function related
PHP Version: 4.3.3 OS: Windows
Private report: No CVE-ID: None
 [2003-09-18 04:05 UTC] d dot stogov at turck dot spb dot eu
Description:
------------
This BUG is Windows releated. PHP thinks what filepathes started form one slash are relative. The problem comes from IS_ABSOLUTE_PATH definw which is defined in file "TSRM/tsrm_virtual_cwd.h" line 64.

The original source is

#define IS_ABSOLUTE_PATH(path, len) \
  (len >= 2 && ((isalpha(path[0]) && path[1] == ':') || (IS_SLASH(path[0]) && IS_SLASH(path[1]))))

but I think it must be changed to

#define IS_ABSOLUTE_PATH(path, len) \
  ((len >= 2 && isalpha(path[0]) && path[1] == ':') || \
   (len >= 1 && IS_SLASH(path[0]) && IS_SLASH(path[1])))

I demonstrate the BUG of the glob() function, but it can occur in any place where IS_ABSOLUTE_PATH is used.

Reproduce code:
---------------
<?php
function remove_drive($file) {
  return substr($file,2);
}

if (substr(PHP_OS,0,3) == WIN) {
  $drive = substr(getcwd(),0,2);
  $a1 = glob("/*");
  $a2 = array_map("remove_drive",glob($drive."/*"));
  if ($a1==$a2) {
    echo "ok";
  } else {
    echo "fail";
  }
} else {
  echo "ok";
}
?>


Expected result:
----------------
ok

Actual result:
--------------
fail

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-09-19 21:38 UTC] iliaa@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC