MFH: Fixed bug #25583 (Incorrect handling of absolute path without drive).