TSRM/tsrm_virtual_cwd.h
@@ -61,10 +61,10 @@ typedef unsigned short mode_t;
  * to account for volume name that is unique to NetWare absolute paths
  */
 #define COPY_WHEN_ABSOLUTE(path) 2
-#define IS_ABSOLUTE_PATH(path, len) \
-	(len >= 2 && ((isalpha(path[0]) && path[1] == ':') || (IS_SLASH(path[0]) && IS_SLASH(path[1]))))
 #define IS_UNC_PATH(path, len) \
 	(len >= 2 && IS_SLASH(path[0]) && IS_SLASH(path[1]))
+#define IS_ABSOLUTE_PATH(path, len) \
+	((len >= 2 && ((isalpha(path[0]) && path[1] == ':') || IS_UNC_PATH(path, len))) || (len >= 1 && IS_SLASH(path[0])))
 
 #elif defined(NETWARE)
 #ifdef HAVE_DIRENT_H
